syntax = "proto3";

option csharp_namespace = "social_app_client";

package user;

service UserStream {
	rpc Create (UserGrpc) returns (EmptyGrpc);
	rpc Update (UpdateUser) returns (EmptyGrpc);
	rpc Delete (UserIdGrpc) returns (EmptyGrpc);
	rpc Get (UserIdGrpc) returns (UserGrpc);
	rpc GetAll (EmptyGrpc) returns (UsersGrpc);
}

message UserGrpc {
	string name = 1;
	string email = 2;
	string password = 3;
}

/** Creating a new message because of the id */
message UpdateUser {
	string id = 1;
	string name = 2;
	string email = 3;
	string password = 4;
}

message UsersGrpc {
	repeated UpdateUser users = 1;
}

message UserIdGrpc {
	string id = 1;
}

message EmptyGrpc {

}